--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,9 @@
     font-weight: normal;
     font-style: normal;
 }
-
-
 body{
     font-family: Roboto, sans-serif;
 }
-
 .header{
     padding-top: 30px;
     padding-bottom: 30px;
@@ -52,7 +49,6 @@ body{
     align-items: center;
     text-transform: uppercase;
 }
-
 .hero__block_text{
     max-width: 300px;
 }
@@ -124,6 +120,7 @@ body{
     text-transform: uppercase;
     cursor: pointer;
     transition: all 0.2s;
+    font-family: Roboto, sans-serif;
 }
 .button__one{
     background-color: #0842B7;
@@ -139,7 +136,7 @@ body{
     padding: 18px 40px;
     margin-bottom: 12px;
 }
-.hero__block__text{
+.hero__block_text{
     font-size: 20px;
     max-width: 288px;
 }
@@ -180,32 +177,23 @@ body{
     max-width: 235px;
     line-height: 1.2;
 }
-
-
-
-
-
 .plan{
     margin-top: 117px;
     margin-bottom: 120px;
     text-align: center;
 }
-
 .plan__title{
     font-size: 36px;
     font-weight: 300;
     margin-bottom: 30px;
 }
-
 .plan__bold{
     font-weight: 700;
 }
-
 .plan__info{
     max-width: 350px;
     margin: auto;
 }
-
 .plan__img{
     margin-top: 21px;
     margin-bottom: 31px;
@@ -221,8 +209,7 @@ body{
     margin: auto;
     margin-top: 80px;
 }
-
-.plan__video__play{
+.plan__video_play{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -230,22 +217,18 @@ body{
     margin-left: -32px;
     cursor: pointer;
 }
-
 .plan__block{
     max-width: 560px;
     margin: auto;
 }
-
-.plan__block__title{
+.plan__block_title{
     font-size: 20px;
     margin-top: 77px;
     margin-bottom: 30px;
 }
-
 .plan__text{
     margin-bottom: 45px;
 }
-
 .plan__button{
     display: flex;
     color: #ffffff;
@@ -256,6 +239,8 @@ body{
     outline: none;
     font-weight: 700;
     margin: auto;
+    font-family: Roboto, sans-serif;
+    cursor: pointer;
 }
 .training__title{
     padding-top: 117px;
@@ -272,34 +257,23 @@ body{
     padding-bottom: 140px;
     border-bottom: 1px solid #eaf1f7;
 }
-
 .training__card{
     max-width: 250px;
 }
-
 .training__icon{
     margin-top: 100px;
     margin-bottom: 50px;
 }
-
-.training__card__title{
+.training__card_title{
     font-size: 20px;
     margin-bottom: 30px;
 }
-
-
-
-
-
-
-
 .price{
     position: relative;
     padding-top: 118px;
     margin-bottom: 120px;
     text-align: center;
 }
-  
 .price::before{
     position: absolute;
     content: '';
@@ -313,7 +287,6 @@ body{
     height: 72px;
     background-color: #eaf1f7;
 }
-
 .price__heading{
     max-width: 700px;
     margin: auto;
@@ -334,17 +307,17 @@ body{
     position: relative;
     flex-basis: 33%;
 }
-.price__card__title{
+.price__card_title{
     font-size: 20px;
 }
-.price__card__info{
+.price__card_info{
     font-size: 20px;
     font-weight: 700;
     display: inline-block;
     margin-top: 30px;
     margin-bottom: 45px;
 } 
-.price__card__text{
+.price__card_text{
     font-size: 16px;
     max-width: 230px;
     margin: auto;
@@ -360,7 +333,7 @@ body{
     border: 1px solid #0056cf;
     color: #0056cf;
 }
-.price__card__info{
+.price__card_info{
     color: #06bee1;
 }
 .privilege{
@@ -374,39 +347,83 @@ body{
     margin-bottom: 60px;
 }
 .privilege__cards{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
-  
-.privilege__cards__title{
+.privilege__cards_title{
     font-size: 24px;
     margin-top: 65px;
     margin-bottom: 25px;
 }
-  
 .privilege__card{
     width: 30%;
 }
-  
-.privilege__card__image{
+.privilege__card_image{
     margin-bottom: 10px;
 }
-  
 .privilegecardtitle{
     font-size: 16px;
 }
-.privilege__card__text{
+.privilege__card_text{
     max-width: 250px;
     margin: auto;
     font-size: 16px;
     line-height: 24px;
+}
+.footer{
+    padding-top: 130px;
+    padding-bottom: 130px;
+}
+.footer__block{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start
+}
+.footer__logo{
+    font-size: 24px;
+    text-decoration: none;
+    color: #000000;
+    font-weight: 300;
+    margin-bottom: 40px;
+    display: flex;
+}
+.footer__nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 725px;
+}
+.footer__nav_info{
+    max-width: 130px;
+}
+.footer__nav_block{
+    display: flex;
+    flex-direction: column;
+}
+.footer__nav_link{
+    margin-bottom: 15px;
+    text-decoration: none;
+    color: #777777;
+    transition: 0.2s;
+}
+.footer__nav_link:hover{
+    color: #000000;
+}
+.footer__contact{
+    max-width: 263px;
+    width: 100%;
+}
+.footer__input{
+    padding-top: 17px;
+    padding-bottom: 17px;
+    padding-left: 20px;
+    width: 100%;
+    border: 1px solid #cfdeee;
+    outline: none;
+    border-radius: 4px;
+    margin-bottom: 22px;
+    background: url("../img/mail.png") no-repeat right;
+    background-position-x: 95%
 }
